--- a/index.html
+++ b/index.html
@@ -86,74 +86,55 @@
 <div class="cat-img" id="p"></div>
 
 <script>
-    /*Preloading alternate cat image*/
-    preload = new Image();
-    preload.src = "imgs/op.png";
-
-    /*Cat elem*/
-    cat = document.getElementById("p")
-
-    /*Pop mp3s*/
-    pops = [
-        "pops/pop1.mp3",
-        "pops/pop2.mp3",
-        "pops/pop3.mp3",
-        "pops/pop4.mp3",
-    ]
-    pop_i = 0
-
-    /*Cookie utils*/
-    function getCookie(cname) {
-        var name = cname + "=";
-        var decodedCookie = decodeURIComponent(document.cookie);
-        var ca = decodedCookie.split(';');
-        for(var i = 0; i <ca.length; i++) {
-            var c = ca[i];
-            while (c.charAt(0) == ' ') {
-                c = c.substring(1);
-            }
-            if (c.indexOf(name) == 0) {
-                return c.substring(name.length, c.length);
-            }
-        }
-        return "";
+    let popcat_counter = 0;
+    //get element(like node on the tree
+    let cat = document.getElementById("p");
+    /*function open_popcat() {
+        popcat_counter++;
     }
-    function setCookie(cname, cvalue, exdays) {
-        var d = new Date();
-        d.setTime(d.getTime() + (exdays*24*60*60*1000));
-        var expires = "expires="+ d.toUTCString();
-        document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
+    //func ptr
+    var s = open_popcat();
+
+    s();
+    open_popcat();
+    */
+
+    //匿名函數
+    //Popcat按下
+    let open_popcat = function ()
+    {
+        popcat_counter++;
+        //可修改 屬性, css, img src, 標籤包的文字
+        cat.innerHTML = popcat_counter;
+        cat.id = "op";
+        let popcat_audio = new Audio("pops/pop1.mp3");
+        popcat_audio.load();
+        popcat_audio.play();
     }
 
-    pop_count = getCookie("pop_count")
-    cat.innerHTML = pop_count > 0 ? pop_count : ""
 
-    op_func = function(){
-        /*Chance cat image to op.jpg via css*/
-        cat.id = "op"
-
-        /*Play pop noise*/
-        a = new Audio(pops[pop_i])
-        a.load()
-        a.play()
-
-        /*Increment index for next pop noise*/
-        pop_i = (pop_i+1)%pops.length
-
-        /*Increment pop count*/
-        pop_count++
-        cat.innerHTML = pop_count
-        setCookie("pop_count",pop_count,365)
-
-        /*Fire google analytics event for pop*/
-        // gtag('event', 'pop');
+    /*
+    let p_func = function ()
+    {
+        setTimeout(close_popcat, 25);
     }
-    p_func = () => setTimeout(() => cat.id = "p", 25)
 
-    document.addEventListener("pointerup", p_func)
-    document.addEventListener("keyup", p_func)
-    document.addEventListener("pointerdown", op_func)
-    document.addEventListener("keydown", op_func)
+    let close_popcat = function ()
+    {
+        cat.id = "p";
+    }
+    */
+
+    let p_func = () => setTimeout(()=>cat.id="p" ,500);
+
+    document.addEventListener("keydown", open_popcat);
+    document.addEventListener("pointerdown", open_popcat);
+    document.addEventListener("keyup", p_func);
+    document.addEventListener("pointerup", p_func);
+
+
+
+
 </script>
 </body>
 </html>
